--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Document...</title>
     <link rel="stylesheet" href="./introduceKit/bootstrap-5.1.3/bootstrap.min.css" />
     <link rel="stylesheet" href="./introduceKit/owlcarousel2-2.3.4/owl.carousel.min.css" />
     <link rel="stylesheet" href="./introduceKit/owlcarousel2-2.3.4/owl.theme.default.min.css" />
@@ -225,7 +225,7 @@
             年去世，但他的價值觀將持續影響 INDIBA ®，以創新、恢復生命力、持續改善為主旨持續努力。
           </p>
           <div class="d-flex justify-content-end">
-            <img src="./images/aboutUs/iso.png" alt="" class="about-iso"/>
+            <img src="./images/aboutUs/iso.png" alt="" class="about-iso" />
           </div>
         </div>
       </div>
