--- a/home/about.html
+++ b/home/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document..............!!!!</title>
+    <title>Document..............!!!!XXXX</title>
     <link rel="stylesheet" href="./introduceKit/bootstrap-5.1.3/bootstrap.min.css" />
     <link rel="stylesheet" href="./introduceKit/owlcarousel2-2.3.4/owl.carousel.min.css" />
     <link rel="stylesheet" href="./introduceKit/owlcarousel2-2.3.4/owl.theme.default.min.css" />
