--- a/version.html
+++ b/version.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    版本 1.0.0.1 這是主線的代碼 通通保留 版本 1.0.0.1 這是分支的代碼
+    <p>主線的文字</p>
   </body>
 </html>
