--- a/version.html
+++ b/version.html
@@ -7,9 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p>主線的文字--修改的文字</p>
-    <p>這是分支的代碼 - 再次修改(有新增檔案)...再再修修修修</p>
-    <p>這下會衝突</p>
-    <h1>分支修改</h1>
+    <p>主線的文字</p>
+    <p>修改.....</p>
   </body>
 </html>
